--- a/gui/tinyI2C.ui
+++ b/gui/tinyI2C.ui
@@ -542,7 +542,7 @@ window</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QTabWidget" name="tabWidget">
+       <widget class="QTabWidget" name="registers_tab">
         <property name="currentIndex">
          <number>0</number>
         </property>
@@ -856,14 +856,14 @@ window</string>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton_7">
+              <widget class="QPushButton" name="readbtn_reg2">
                <property name="text">
                 <string>Read</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QSpinBox" name="spinBox_4">
+              <widget class="QSpinBox" name="read_reg2">
                <property name="enabled">
                 <bool>false</bool>
                </property>
@@ -873,7 +873,7 @@ window</string>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton_8">
+              <widget class="QPushButton" name="writebtn_reg2">
                <property name="text">
                 <string>Write</string>
                </property>
@@ -1009,56 +1009,56 @@ window</string>
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_7">
              <item>
-              <widget class="QCheckBox" name="checkBox_57">
+              <widget class="QCheckBox" name="reg47">
                <property name="text">
                 <string>7</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_58">
+              <widget class="QCheckBox" name="reg46">
                <property name="text">
                 <string>6</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_59">
+              <widget class="QCheckBox" name="reg45">
                <property name="text">
                 <string>5</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_60">
+              <widget class="QCheckBox" name="reg44">
                <property name="text">
                 <string>4</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_61">
+              <widget class="QCheckBox" name="reg43">
                <property name="text">
                 <string>3</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_62">
+              <widget class="QCheckBox" name="reg42">
                <property name="text">
                 <string>2</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_63">
+              <widget class="QCheckBox" name="reg41">
                <property name="text">
                 <string>1</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_64">
+              <widget class="QCheckBox" name="reg40">
                <property name="text">
                 <string>0</string>
                </property>
@@ -1426,280 +1426,7 @@ window</string>
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>getPortBtn</sender>
-   <signal>clicked()</signal>
-   <receiver>portList</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>124</x>
-     <y>51</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>493</x>
-     <y>62</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>readbtn_CH2</sender>
-   <signal>clicked()</signal>
-   <receiver>read_CH2</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>183</x>
-     <y>184</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>182</x>
-     <y>217</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>base_CH3</sender>
-   <signal>editingFinished()</signal>
-   <receiver>base_CH3</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>368</x>
-     <y>134</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>368</x>
-     <y>134</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>readbtn_CH4</sender>
-   <signal>clicked()</signal>
-   <receiver>read_CH4</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>417</x>
-     <y>186</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>418</x>
-     <y>216</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>base_CH2</sender>
-   <signal>editingFinished()</signal>
-   <receiver>base_CH2</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>159</x>
-     <y>131</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>243</x>
-     <y>134</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>reg_CH1</sender>
-   <signal>editingFinished()</signal>
-   <receiver>reg_CH1</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>53</x>
-     <y>169</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>47</x>
-     <y>169</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>readbtn_CH3</sender>
-   <signal>clicked()</signal>
-   <receiver>read_CH3</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>314</x>
-     <y>192</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>310</x>
-     <y>213</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>reg_CH2</sender>
-   <signal>editingFinished()</signal>
-   <receiver>reg_CH2</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>153</x>
-     <y>154</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>243</x>
-     <y>169</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>readbtn_CH1</sender>
-   <signal>clicked()</signal>
-   <receiver>read_CH1</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>69</x>
-     <y>187</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>66</x>
-     <y>216</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>writebtn_CH1</sender>
-   <signal>clicked()</signal>
-   <receiver>write_CH1</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>69</x>
-     <y>263</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>96</x>
-     <y>309</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>writebtn_CH3</sender>
-   <signal>clicked()</signal>
-   <receiver>write_CH3</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>298</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>296</x>
-     <y>289</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>writebtn_CH2</sender>
-   <signal>clicked()</signal>
-   <receiver>write_CH2</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>187</x>
-     <y>258</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>243</x>
-     <y>309</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>writebtn_CH4</sender>
-   <signal>clicked()</signal>
-   <receiver>write_CH4</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>416</x>
-     <y>264</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>492</x>
-     <y>309</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>base_CH1</sender>
-   <signal>editingFinished()</signal>
-   <receiver>base_CH1</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>72</x>
-     <y>130</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>52</x>
-     <y>134</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>reg_CH3</sender>
-   <signal>editingFinished()</signal>
-   <receiver>reg_CH3</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>284</x>
-     <y>152</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>368</x>
-     <y>169</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>base_CH4</sender>
-   <signal>editingFinished()</signal>
-   <receiver>base_CH4</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>408</x>
-     <y>131</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>492</x>
-     <y>134</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>reg_CH4</sender>
-   <signal>editingFinished()</signal>
-   <receiver>reg_CH4</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>409</x>
-     <y>156</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>492</x>
-     <y>169</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
  <designerdata>
   <property name="gridDeltaX">
    <number>10</number>
